tests/error/redeclaring_enum_value.c
// check "Redeclaration of enum value as '2'."
// fail  "the previous declaration of value '1'."

enum arst{
    ARST = 1,
    ARST = 2,
};

int main(){
    
}
